# shaped-types

./: .gitignore  COPYING  Makefile  README.md  shaped-types.cabal  stack.yaml
src/: .ghci  Types.hs
src/ShapedTypes/: Add.hs  ApproxEq.hs  FFT.hs  Fams.hs  Interactive.hs  LPow.hs  Linear.hs  Misc.hs  Nat.hs  Orphans.hs  Pair.hs  Plugin.hs  RPow.hs  RTree.hs  Scan.hs  ScanF.hs  Shift.hs  Sized.hs  Vec.hs
src/ShapedTypes/Types/: LPow.hs  Pair.hs  RPow.hs  Vec.hs
test/: Makefile  Play.hss  Tests.hs
