Name:                shaped-types
Version:             0.0.0
Cabal-Version:       >= 1.6
Synopsis:            Statically shaped types
Category:            data
Description:
  Experimenting with statically shaped types, GHC specialization, and reification
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2016 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/shaped-types.git

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       QuickCheck >= 2.7.3
                     , base<5
                     , circat
                     , ghc-prim
                     , keys
                     , mtl >= 2.2.1
                     , newtype-generics
                     , pointed

--                      , reification-rules

-- TODO: can I drop ghc-prim and still compile with the reification plugin?

  Exposed-Modules:     
                       ShapedTypes.Misc
                       ShapedTypes.Sized
                       ShapedTypes.ApproxEq
                       ShapedTypes.Linear
                       ShapedTypes.Scan
                       ShapedTypes.ScanF
                       ShapedTypes.FFT
                       ShapedTypes.Shift
                       ShapedTypes.Pair
                       ShapedTypes.Nat
                       ShapedTypes.Vec
                       ShapedTypes.RPow
                       ShapedTypes.LPow
                       ShapedTypes.Fams
                       ShapedTypes.Orphans
                       ShapedTypes.Add
  Other-Modules:
                       ShapedTypes.Types.Pair
                       ShapedTypes.Types.Vec
                       ShapedTypes.Types.RPow
                       ShapedTypes.Types.LPow


  ghc-options:         -Wall -O

--                        -fplugin=ReificationRules.Plugin -dcore-lint -fexpose-all-unfoldings

--                        -fplugin-opt=ReificationRules.Plugin:trace

--                        -ddump-rule-firings

--                        -ddump-rule-rewrites

--                        -ddump-inlinings

--                        -ddump-rules

                       -dsuppress-idinfo -dsuppress-module-prefixes

                       -fsimpl-tick-factor=200

-- TODO: Add a flag for whether to compile with reification.
